<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Taps Aff</string>
    <string name="widget_label_small">taps aff (small)</string>
    <string name="widget_label_medium">taps aff (medium)</string>
    <string name="widget_label_large">taps aff (large)</string>
    <string name="loading_string">tap?</string>
    <string name="temperature_setting">"Taps Aff" Temperature (°C)</string>
    <string name="temperature_units">Temperature Units</string>
    <string name="temperature_default">17</string>
    <string name="unit_default">Celsius</string>
    <string name="update_frequency">Update Frequency</string>
    <string name="primary_colour">Text Colour</string>
    <string name="show_temperature">Show Temperature</string>
    <string name="temperature_color">Temperature Text Colour</string>
    <string name="save">Save</string>
    <string name="extension_title">Taps Aff</string>
    <string name="extension_description">Is it taps aff?  Now you can tell from one look at your lock screen.</string>
    <string name="about_details">Widget by Ian Adie with inspiration from www.taps-aff.co.uk.\n\nComments, suggestions and bugs to\nMail:\t\ttapsaff@ianadie.co.uk\nTwitter:\t@mini_dez\n\n\nIf you like the app then tell yer pals, and give it a five star rating.\n\nPowered by www.openweathermap.org</string>
    <string name="about_rate_test">Save</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="rate">Rate App</string>
    <string name="text_colour">Text Colour (homescreen only)</string>
    <string name="text_colour_default">Light</string>
    <string name="version">version 1.0.6</string>
    <string name="taps_aff_string_large">taps aff</string>
    <string name="taps_oan_string_large">taps oan</string>
    <string name="taps_aff_string_medium">aff</string>
    <string name="taps_oan_string_medium">oan</string>
</resources>
