<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="5dip">
	
	<RelativeLayout
		android:id="@+id/about_rel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="10dip"
		android:layout_marginBottom="10dip">
	  	
	  	<TextView
	  		android:id="@+id/about_title"
	  		android:text="@string/app_name"
	  		android:textSize="30sp"
	  		android:textStyle="bold"
	  		android:layout_width="wrap_content"
	  		android:layout_centerHorizontal="true"
	  		android:layout_height="wrap_content"
	  		android:layout_alignParentLeft="true"/>
	  	
	  	<TextView
	  		android:text="@string/version"
	  		android:textSize="10sp"
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:layout_below="@id/about_title"
	  		android:layout_alignRight="@id/about_title"/>
	</RelativeLayout>
		
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_below="@+id/about_rel">
		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			
			<TextView
				android:id="@+id/about_comments"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="20dip"
	  			android:text="@string/about_details"/>
			
			<Button
				android:id="@+id/about_rateButton"
				android:layout_below="@+id/about_comments"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/rate"
				android:layout_centerHorizontal="true"/>
		</RelativeLayout>
	</ScrollView>
</RelativeLayout>

