<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:padding="5dip">
  <RelativeLayout
	  android:layout_width="fill_parent"
	  android:layout_height="?android:attr/listPreferredItemHeight"
	  android:id="@+id/settings_unitsLayout">
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_centerVertical="true"
			android:layout_marginRight="90dip"
			android:text="@string/temperature_units"
		/>
		<Spinner
			android:id="@+id/settings_units"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"
			android:layout_width="140dip"
		/>
	</RelativeLayout>
  <RelativeLayout
	  android:layout_width="fill_parent"
	  android:layout_height="?android:attr/listPreferredItemHeight"
	  android:id="@+id/settings_tempLayout"
	  android:layout_below="@+id/settings_unitsLayout">
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_centerVertical="true"
			android:layout_marginRight="90dip"
			android:text="@string/temperature_setting"
		/>
		<EditText
			android:id="@+id/settings_temp"
			android:layout_height="wrap_content"
			android:maxLength="3"
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"
			android:digits="1234567890"
			android:layout_width="70dip"
			android:inputType="number|phone"
		/>
	</RelativeLayout>
	<TextView
		android:id="@+id/settings_about"
	  	android:layout_below="@+id/settings_tempLayout"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/about"
	/>
	<Button
		android:id="@+id/settings_save"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_alignParentBottom="true"
		android:text="@string/save"
		android:layout_centerInParent="true" 
		android:paddingLeft="20dip"
		android:paddingRight="20dip"/>
	/>
</RelativeLayout>